# latex-server-client

./: .gitignore  .latexignore.example  LICENSE  Makefile  Manifest.in  README.md  latex-server-client.spec  pyproject.toml
example-project/: .latexignore  README.md  abstract.tex  conclusion.tex  introduction.tex  main.tex  methods.tex  references.bib  results.tex
example-project/tables/: results.tex
latex_server_client/: __init__.py  latex_watch.py
tests/: __init__.py  test_latex_watch.py
